--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                     <input type="radio" id="currency-left4" name="left-currencies" value="GBP">
                     <label for="currency-left4">GBP</label>
                     <select class="left-currency-select">
+                        <option value="JPY">JPY</option>                        
                         <option value="CNY">CNY</option>
                         <option value="MXN">MXN</option>
                         <option value="ISK">ISK</option>
@@ -99,6 +100,7 @@
                     <input type="radio" id="currency-right4" name="right-currencies" value="GBP">
                     <label for="currency-right4">GBP</label>
                     <select class="right-currency-select">
+                        <option value="JPY">JPY</option>
                         <option value="CNY">CNY</option>
                         <option value="MXN">MXN</option>
                         <option value="ISK">ISK</option>
